fix: remove deprecated SecurityManager usage, simplify CleanerUtil for Java 17
- NamedThreadFactory: remove SecurityManager.getThreadGroup() call
- KafkaDataServerStartable: remove SecurityManager-based System.exit trap
- CleanerUtil: remove Java 8 fallback path (sun.misc.Cleaner), keep only
  Java 9+ path (Unsafe.invokeCleaner), add @SuppressWarnings("removal")
  for AccessController usage

Co-Authored-By: Matthew McDonald <mattjmcd12@gmail.com>